[gd_scene load_steps=22 format=3 uid="uid://skxrnmiyhs86"]

[ext_resource type="Texture2D" uid="uid://cvymwsc47kgag" path="res://assets/textures/panel.bgwhite.png" id="1_fsw0k"]
[ext_resource type="Script" path="res://scripts/windows/employee.gd" id="2_kfhrd"]
[ext_resource type="PackedScene" uid="uid://c4e081k54h20x" path="res://scenes/label.tscn" id="3_dr2du"]
[ext_resource type="Texture2D" uid="uid://dgwv1vjemwmo2" path="res://assets/textures/task_icons.circle.png" id="4_a5w6a"]
[ext_resource type="FontFile" uid="uid://cwl80ym5go76r" path="res://assets/fonts/NanumPenScript-Regular.ttf" id="4_k3rli"]
[ext_resource type="Texture2D" uid="uid://d1oj4bajw5n5e" path="res://assets/textures/panel.corner.png" id="5_m38ew"]
[ext_resource type="Texture2D" uid="uid://ckswasapjbmqg" path="res://assets/textures/task_icons.square.png" id="5_sic4t"]
[ext_resource type="Texture2D" uid="uid://t7v0lyl0gi2t" path="res://assets/textures/panel.close.png" id="6_0iqu2"]
[ext_resource type="Texture2D" uid="uid://bfagubjcu0s7n" path="res://assets/textures/task_icons.diamond.png" id="6_2mxtr"]
[ext_resource type="Texture2D" uid="uid://cfoimwgjsler4" path="res://assets/textures/task_icons.triangle.png" id="7_elxbx"]
[ext_resource type="Texture2D" uid="uid://dp58pw2rhjmjc" path="res://assets/textures/panel.close.red.png" id="7_kdmst"]
[ext_resource type="Script" path="res://scripts/tasks/task_list.gd" id="8_bk1fw"]
[ext_resource type="Script" path="res://scripts/windows/window_component.gd" id="8_d5t50"]
[ext_resource type="Texture2D" uid="uid://da3hsxs0e2br1" path="res://assets/textures/task_icons.star.png" id="9_itb6j"]
[ext_resource type="Texture2D" uid="uid://cbfvwm00662jy" path="res://assets/textures/bar.under.png" id="10_3dd6q"]
[ext_resource type="PackedScene" uid="uid://dlip7jieytqqw" path="res://scenes/tasks/task.tscn" id="10_ox2yh"]
[ext_resource type="Texture2D" uid="uid://cnjiawcpulbfs" path="res://assets/textures/bar.over.png" id="10_viy3c"]

[sub_resource type="LabelSettings" id="LabelSettings_ei33e"]
resource_local_to_scene = true
font = ExtResource("4_k3rli")
font_size = 42
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycyx2"]

[sub_resource type="LabelSettings" id="LabelSettings_siyav"]
resource_local_to_scene = true
font = ExtResource("4_k3rli")
font_size = 32
font_color = Color(0, 0, 0, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_3mki7"]
resource_local_to_scene = true
font = ExtResource("4_k3rli")
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="employee" type="NinePatchRect"]
offset_left = 15.0
offset_top = 18.0
offset_right = 215.0
offset_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_fsw0k")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource("2_kfhrd")
tex_player = ExtResource("9_itb6j")
tex_green = ExtResource("4_a5w6a")
tex_blue = ExtResource("5_sic4t")
tex_violet = ExtResource("6_2mxtr")
tex_magenta = ExtResource("7_elxbx")

[node name="WindowComponent" type="Node" parent="."]
script = ExtResource("8_d5t50")
window_key = "0"

[node name="Label" parent="." instance=ExtResource("3_dr2du")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = 18.0
offset_right = 51.5
offset_bottom = 75.0
grow_horizontal = 2
text = "title"
label_settings = SubResource("LabelSettings_ei33e")
horizontal_alignment = 1
uppercase = true

[node name="button_corner" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.0862745)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.6, 0.6)
disabled = true
texture_normal = ExtResource("5_m38ew")
stretch_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ycyx2")

[node name="button_close" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_top = 21.0
offset_right = -2.0
offset_bottom = 61.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("6_0iqu2")
texture_hover = ExtResource("7_kdmst")
stretch_mode = 3

[node name="task_list" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 32.0
offset_top = 77.0
offset_right = -32.0
offset_bottom = 227.0
grow_horizontal = 2
script = ExtResource("8_bk1fw")
Task = ExtResource("10_ox2yh")

[node name="type" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 0
offset_left = 18.0
offset_top = 20.0
offset_right = 118.0
offset_bottom = 120.0
rotation = -0.0872665
scale = Vector2(0.33, 0.33)
mouse_filter = 2
texture = ExtResource("9_itb6j")

[node name="overload_bar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -74.0
offset_right = -34.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 0.7)
mouse_filter = 2
max_value = 2500.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("10_3dd6q")
texture_progress = ExtResource("10_viy3c")

[node name="overload_label" parent="overload_bar" instance=ExtResource("3_dr2du")]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_right = 49.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
text = "workload"
label_settings = SubResource("LabelSettings_siyav")
horizontal_alignment = 1
vertical_alignment = 1

[node name="count_label" parent="." instance=ExtResource("3_dr2du")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.5
offset_top = -119.0
offset_right = 37.5
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"
label_settings = SubResource("LabelSettings_3mki7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="x" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(37, 35)
scale = Vector2(1.66071, 1.66071)
texture = ExtResource("7_kdmst")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="button_corner" to="." method="_on_texture_button_pressed"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="gui_input" from="Panel" to="WindowComponent" method="_on_panel_gui_input"]
[connection signal="pressed" from="button_close" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="button_close" to="WindowComponent" method="_on_button_close_pressed"]
